Strongly revamped how Endless mode works: removed the jackpot and modified time payouts, added All Clear mechanic that only gives points when all blocks are pushed to the other side. Added a trail that follow the player and doesn't Z-fight too much. Added a bunch of dots that emulate a parallax effect. Formalized the eye color as c[5] in color palettes. Fixed level generation. Now there's a smaller chance the same part of level is generated in a row.

--- a/style.css
+++ b/style.css
@@ -105,8 +105,8 @@ html, body {
 
 .jackpot {
   font-size: 20px;
-  transform: translate(50%,100%) rotate(-10deg);
-  width: 120px;
+  transform: translate(25%,100%) rotate(-10deg);
+  width: 200px;
   color: black;
   background-color: white;
   mix-blend-mode: screen; /* This makes the cutout text possible */
@@ -177,33 +177,27 @@ html, body {
   }
 }
 
-@keyframes jackpot-gain {
-  from {
-    transform: translate(50%,80%) rotate(-10deg);
-  }
-  to {
-    transform: translate(50%,100%) rotate(-10deg);
-  }
-}
-
-@keyframes jackpot-gain-2 {
-  from {
-    transform: translate(50%,80%) rotate(-10deg);
-  }
-  to {
-    transform: translate(50%,100%) rotate(-10deg);
-  }
-}
-
-@keyframes jackpot-claim {
+@keyframes jackpot-claim-1 {
   0% {
-    transform: translate(50%,100%) rotate(-10deg);
+    transform: translate(25%,100%) rotate(-10deg);
   }
   50% {
-    transform: translate(50%,100%) rotate(-190deg);
+    transform: translate(25%,100%) rotate(-190deg);
   }
   100% {
-    transform: translate(50%,100%) rotate(-370deg);
+    transform: translate(25%,100%) rotate(-370deg);
+  }
+}
+
+@keyframes jackpot-claim-2 {
+  0% {
+    transform: translate(25%,100%) rotate(-10deg);
+  }
+  50% {
+    transform: translate(25%,100%) rotate(-190deg);
+  }
+  100% {
+    transform: translate(25%,100%) rotate(-370deg);
   }
 }
 
